--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-# spring.datasource properties are defined in profile specific properties file
+# spring.datasource properties are defined in profile specific properties file (not checked into git)
 spring.profiles.active=loc
