Fix issues with Spring Security.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 # spring.datasource properties are defined in profile specific properties file (not checked into git)
 spring.profiles.active=loc
+
+# This is a workaround for https://github.com/vaadin/spring/issues/381
+spring.servlet.multipart.enabled = false
