--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
       "@vaadin/vaadin-tabs": "3.1.0",
       "@vaadin/vaadin-radio-button": "1.3.0",
       "@vaadin/vaadin-lumo-styles": "1.6.0",
-      "@vaadin/vaadin-material-styles": "1.3.2"
+      "@vaadin/vaadin-material-styles": "1.3.2",
+      "@polymer/iron-media-query": "3.0.1",
+      "element-match-media": "0.0.3"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -51,7 +53,7 @@
       "webpack-merge": "4.2.2",
       "webpack-dev-server": "3.10.3"
     },
-    "hash": "f74b4fe9f6b4865e6a7943af6c0f868f4bbb819a41f714b69274598d49f30b9e"
+    "hash": "b758dcdaf257bd837da8f5b41ae920a0ae7aadf1c60a6862fdba55def4b7f252"
   },
   "dependencies": {
     "lit-element": "^2.2.1",
@@ -89,7 +91,9 @@
     "@vaadin/vaadin-tabs": "3.1.0",
     "@vaadin/vaadin-radio-button": "1.3.0",
     "@vaadin/vaadin-lumo-styles": "1.6.0",
-    "@vaadin/vaadin-material-styles": "1.3.2"
+    "@vaadin/vaadin-material-styles": "1.3.2",
+    "@polymer/iron-media-query": "3.0.1",
+    "element-match-media": "0.0.3"
   },
   "devDependencies": {
     "webpack-babel-multi-target-plugin": "2.3.3",
