--- a/pom.xml
+++ b/pom.xml
@@ -146,4 +146,12 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>packages-artifactory-primary-0-snapshots</name>
+            <url>https://packages.jfrog.io/artifactory/libs-snapshot-local</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 </project>
